--- a/Revassess/src/sql/setup.properties
+++ b/Revassess/src/sql/setup.properties
@@ -1,8 +1,8 @@
 #jdbc url provided by trainer
-hibernate.connection.url= "postgresql-class.cks98gmxels6.us-west-1.rds.amazonaws.com"
+hibernate.connection.url=jdbc:postgresql://postgresql-class.cks98gmxels6.us-west-1.rds.amazonaws.com:5432/revassess_test
 #jdbc test username provided by trainer
-hibernate.connection.username= "associate"
+hibernate.connection.username=tester
 #jdbc test password provided by trainer
-hibernate.connection.password= "password"
+hibernate.connection.password=password
 #the driver associated with the db
-database.engine= "postgresql"
+database.engine=postgresql
