--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ script: ./build.sh
 notifications:
     email:
     #enter your email address below
-        - will.hoefer@revature.net
+        will.hoefer@revature.net
